namespace Configs
{
    public class AnimationInfo
    {
        public class Player
        {
            public class Parameters
            {
                public const string Jump = "Jump";
                public const string DoubleJump = "DoubleJump";
                public const string Run = "IsRun";
                public const string Grounded = "IsGrounded";
                public const string WallHooked = "IsWallHooked";
                public const string Dance = "isDance";
            }
        }
    }
}